--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:500');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
+html {
+    -moz-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+}
+
 .App {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
